[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klab_pytest_toolkit"
version = "0.0.1"
description = "A Pytest toolkit"
authors = [{ name = "Burak Kizilkaya", email = "burak.kizilkaya@outlook.com" }]
requires-python = ">=3.11,<4"
readme = "Readme.md"
license = "MIT"
classifiers = []
dependencies = [
    "pytest>=8.3.5",
    "pytest-asyncio==1.3.0",
]

[project.urls]
Homepage = "https://github.com/klab365/klab-pytest-toolkit"
Repository = "https://github.com/klab365/klab-pytest-toolkit"
Documentation = "https://github.com/klab365/klab-pytest-toolkit"
"Bug Tracker" = "https://github.com/klab365/klab-pytest-toolkit/issues"

[dependency-groups]
dev = [
    "coverage==7.12.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0,<0.9",
    "ty>=0.0.1a29",
]

[tool.hatch.build.targets.sdist]
include = ["src/klab_pytest_toolkit"]

[tool.hatch.build.targets.wheel]
include = ["src/klab_pytest_toolkit"]

[tool.hatch.build.targets.wheel.sources]
"src/klab_pytest_toolkit" = "klab_pytest_toolkit"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "**/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover", 
    "raise NotImplementedError", 
    "if __name__ == .__main__.:", 
    "if 0:", 
    "if __name__ == .__main__.:"
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ARG"]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pyright]
typeCheckingMode = "basic"
exclude = ["tests"]
